deploy/k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipl-dhaba-backend-service
  namespace: ipldhaba
spec:
  type: ClusterIP
  selector:
    app: ipl-dhaba-backend
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
